--- a/index.html
+++ b/index.html
@@ -14,6 +14,47 @@
 </head>
 <body>
     <style>
+        #menu {
+        background: #fff;
+        position: absolute;
+        z-index: 1;
+        top: 10px;
+        right: 10px;
+        border-radius: 3px;
+        width: 120px;
+        border: 1px solid rgba(0,0,0,0.4);
+        font-family: 'Open Sans', sans-serif;
+    }
+
+    #menu a {
+        font-size: 13px;
+        color: #404040;
+        display: block;
+        margin: 0;
+        padding: 0;
+        padding: 10px;
+        text-decoration: none;
+        border-bottom: 1px solid rgba(0,0,0,0.25);
+        text-align: center;
+    }
+
+    #menu a:last-child {
+        border: none;
+    }
+
+    #menu a:hover {
+        background-color: #f8f8f8;
+        color: #404040;
+    }
+
+    #menu a.active {
+        background-color: #3887be;
+        color: #ffffff;
+    }
+
+    #menu a.active:hover {
+        background: #3074a4;
+    }
         .map-overlay {
         font: 12px/20px 'Helvetica Neue', Arial, Helvetica, sans-serif;
         position: absolute;
@@ -56,6 +97,7 @@
             font: 12px/20px 'Helvetica Neue', Arial, Helvetica, sans-serif;
         }
     </style>
+<nav id="menu"></nav>
 <div id='map'></div>
 <div class='map-overlay top'>
     <div class='map-overlay-inner'>
@@ -75,16 +117,12 @@
 <script>
 mapboxgl.accessToken = 'pk.eyJ1IjoiZWFydGhhZGFtIiwiYSI6ImNpenJpcTFkbjAwODUyd21mcXhhN3NscG4ifQ.5aXKquX7sLeQr6xFLdghFg';
 
-//Add commas and stuff to cost value
-function numberWithCommas(x) {
-    return x.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ",");
-}
-
 var map = new mapboxgl.Map({
     container: 'map',
-    //style: 'mapbox://styles/earthadam/cjscdcqkc056x1fo0far47a3g',	//Website
+    style: 'mapbox://styles/earthadam/cjscdcqkc056x1fo0far47a3g',	//Website
+    //style: 'mapbox://styles/earthadam/cjsqgd0ab0d831fqaev53tfhk',
     //style: 'mapbox://styles/earthadam/cjggwuqty000n2rltfwjtdfik',	//Presentation
-    style: 'mapbox://styles/earthadam/cjggwweef00002rpuoj1t93h3',	//Desert
+    //style: 'mapbox://styles/earthadam/cjggwweef00002rpuoj1t93h3',	//Desert
     //style: 'mapbox://styles/earthadam/cjs968jaf2e1j1fmp6hj0pwwn',
     center: [28.771726,-0.384252],
     zoom: 7
@@ -105,54 +143,61 @@ var months = [
 'November',
 'December'
 ];
- 
-function filterBy(month) {
- 
-    var filters = ['==', 'month', month];
-    map.setFilter('sites', filters);
-    
-    // Set the label to the month
-    document.getElementById('month').textContent = months[month];
-}
+
 map.on('load', function() {
-    
-        map.addSource('incidents', { type: 'geojson', data: 'nord-kivu-violence.json'});
-        map.addLayer({
-            "id": "sites",
-            "type": "circle",
-            source: "incidents",
-            'paint': {
-                // make circles larger as the user zooms from z12 to z22
-                'circle-radius': {
-                    'base': 10,
-                    'stops': [[12, 3], [22, 100]]
-                },
-                // color circles by ethnicity, using a match expression
-                // https://www.mapbox.com/mapbox-gl-js/style-spec/#expressions-match
-                'circle-color': '#f00'
-            }
-        });
-        // Create a popup, but don't add it to the map yet.
-        var popup = new mapboxgl.Popup({
-            closeButton: false,
-            closeOnClick: false
-        });
+    map.addLayer({
+        "id": "sites",
+        "type": "circle",
+        "source": {
+            type: 'vector',
+            url: 'mapbox://osu-battelle-center.80s4hd6i'
+        },
+        'source-layer': 'convertcsv-8j11wq',
+        "paint": {
+            'circle-radius': {  
+                'base': 10,
+                'stops': [[12, 3], [22, 10]]
+            },
+            'circle-color': '#880000'
+        }
+    });
+    // Create a popup, but don't add it to the map yet.
+    var popup = new mapboxgl.Popup({
+        closeButton: false,
+        closeOnClick: false
+    });
 
-        map.on('mouseover', 'sites', function(e) {
-            // Change the cursor style as a UI indicator.
-            map.getCanvas().style.cursor = 'pointer';
-
-            // Populate the popup and set its coordinates
-            // based on the feature found.
-            popup.setLngLat(e.features[0].geometry.coordinates)
-                .setHTML(
-                "<h2>"+ e.features[0].properties["title"]["en"]+"</h2>"+
-                "<b>Incident ID: "+e.features[0].properties["incident_id"]+"<br>"
-                )
-                //.setHTML(e.features[0].properties.description)
-                .addTo(map);
-        });
 });
+
+var toggleableLayerIds = [ 'sites'];
+
+for (var i = 0; i < toggleableLayerIds.length; i++) {
+    var id = toggleableLayerIds[i];
+
+    var link = document.createElement('a');
+    link.href = '#';
+    link.className = 'active';
+    link.textContent = id;
+
+    link.onclick = function (e) {
+        var clickedLayer = this.textContent;
+        e.preventDefault();
+        e.stopPropagation();
+
+        var visibility = map.getLayoutProperty(clickedLayer, 'visibility');
+
+        if (visibility === 'visible') {
+            map.setLayoutProperty(clickedLayer, 'visibility', 'none');
+            this.className = '';
+        } else {
+            this.className = 'active';
+            map.setLayoutProperty(clickedLayer, 'visibility', 'visible');
+        }
+    };
+
+    var layers = document.getElementById('menu');
+    layers.appendChild(link);
+}
 </script>
 
 </body>
