--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         }
          
         .map-overlay .map-overlay-inner {
-        background-color: #fff;
+        background-color: #777;
         box-shadow:0 1px 2px rgba(0, 0, 0, 0.20);
         border-radius: 3px;
         padding: 10px;
@@ -96,6 +96,9 @@
             max-width: 400px;
             font: 12px/20px 'Helvetica Neue', Arial, Helvetica, sans-serif;
         }
+        .mapboxgl-popup-content {
+            background: #f5c0c0;
+            }
     </style>
 <nav id="menu"></nav>
 <div id='map'></div>
@@ -165,6 +168,22 @@ map.on('load', function() {
     var popup = new mapboxgl.Popup({
         closeButton: false,
         closeOnClick: false
+    });
+    map.on('mouseover', 'violence', function(e) {
+        // Change the cursor style as a UI indicator.
+        map.getCanvas().style.cursor = 'pointer';
+
+        // Populate the popup and set its coordinates
+        // based on the feature found.
+        popup.setLngLat(e.features[0].geometry.coordinates)
+            .setHTML(
+                "<h2>"+e.features[0].properties["0/name"]+"</h2>"+
+                "<b>Date:</b> "+e.features[0].properties["start_date_time/date"]+"<br>"+
+                "<b>Severity:</b> "+e.features[0].properties["severity_rating"]+"<br>"+
+                "<b>Details:</b> "+e.features[0].properties["title/0/en"]
+            )
+            //.setHTML(e.features[0].properties.description)
+            .addTo(map);
     });
     map.addLayer({
       'id': 'site assessments',
