Testing csv2geojson conversion

--- a/index.html
+++ b/index.html
@@ -122,11 +122,7 @@ mapboxgl.accessToken = 'pk.eyJ1IjoiZWFydGhhZGFtIiwiYSI6ImNpenJpcTFkbjAwODUyd21mc
 
 var map = new mapboxgl.Map({
     container: 'map',
-    style: 'mapbox://styles/osu-battelle-center/cjsqq2icr01591foxt2ctxcoe',	//Website
-    //style: 'mapbox://styles/earthadam/cjsqgd0ab0d831fqaev53tfhk',
-    //style: 'mapbox://styles/earthadam/cjggwuqty000n2rltfwjtdfik',	//Presentation
-    //style: 'mapbox://styles/earthadam/cjggwweef00002rpuoj1t93h3',	//Desert
-    //style: 'mapbox://styles/earthadam/cjs968jaf2e1j1fmp6hj0pwwn',
+    style: 'mapbox://styles/osu-battelle-center/cjsqq2icr01591foxt2ctxcoe',
     center: [28.771726,-0.384252],
     zoom: 7
 });
