--- a/index.html
+++ b/index.html
@@ -1,106 +1,30 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" >
+
+<head>
+  <meta charset="UTF-8">
+  <title>Ebola Conflict Map</title>
+  
+  
+  
+      <link rel="stylesheet" href="css/style.css">
+
+  
+</head>
+
+<body>
+
+  <html>
 <head>
     <meta charset='utf-8' />
-    <title>Remote Monitoring Map using Mapbox</title>
+    <title>Ebola Conflict Data Map</title>
     <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
     <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.44.0/mapbox-gl.js'></script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.7.1.min.js"></script>
     <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.44.0/mapbox-gl.css' rel='stylesheet' />
-    <style>
-        body { margin:0; padding:0; }
-        #map { position:absolute; top:0; bottom:0; width:100%; }
-    </style>
 </head>
 <body>
-    <style>
-        #menu {
-        background: #fff;
-        position: absolute;
-        z-index: 1;
-        top: 10px;
-        right: 10px;
-        border-radius: 3px;
-        width: 120px;
-        border: 1px solid rgba(0,0,0,0.4);
-        font-family: 'Open Sans', sans-serif;
-    }
-
-    #menu a {
-        font-size: 13px;
-        color: #404040;
-        display: block;
-        margin: 0;
-        padding: 0;
-        padding: 10px;
-        text-decoration: none;
-        border-bottom: 1px solid rgba(0,0,0,0.25);
-        text-align: center;
-    }
-
-    #menu a:last-child {
-        border: none;
-    }
-
-    #menu a:hover {
-        background-color: #f8f8f8;
-        color: #404040;
-    }
-
-    #menu a.active {
-        background-color: #3887be;
-        color: #ffffff;
-    }
-
-    #menu a.active:hover {
-        background: #3074a4;
-    }
-        .map-overlay {
-        font: 12px/20px 'Helvetica Neue', Arial, Helvetica, sans-serif;
-        position: absolute;
-        width: 25%;
-        top: 0;
-        left: 0;
-        padding: 10px;
-        }
-
-        .map-overlay .map-overlay-inner {
-        background-color: #777;
-        box-shadow:0 1px 2px rgba(0, 0, 0, 0.20);
-        border-radius: 3px;
-        padding: 10px;
-        margin-bottom: 10px;
-        }
-
-        .map-overlay h2 {
-        line-height: 24px;
-        display: block;
-        margin: 0 0 10px;
-        }
-
-        .map-overlay .legend .bar {
-        height: 10px;
-        width: 100%;
-        background: linear-gradient(to right, #FCA107, #7F3121);
-        }
-
-        .map-overlay input {
-        background-color: transparent;
-        display: inline-block;
-        width: 100%;
-        position: relative;
-        margin: 0;
-        cursor: ew-resize;
-        }
-        .mapboxgl-popup {
-            max-width: 400px;
-            font: 12px/20px 'Helvetica Neue', Arial, Helvetica, sans-serif;
-        }
-        .mapboxgl-popup-content {
-            background: #f5c0c0;
-            }
-    </style>
-<nav id="menu"></nav>
+  <nav id="menu"></nav>
 <div id='map'></div>
 <div class='map-overlay top'>
     <div class='map-overlay-inner'>
@@ -115,175 +39,16 @@
     </div>
     </div>
     </div>
+  </body>
+</html>
+  
+  
 
-    <script src='https://d3js.org/d3.v3.min.js' charset='utf-8'></script>
-<script>
-mapboxgl.accessToken = 'pk.eyJ1Ijoib3N1LWJhdHRlbGxlLWNlbnRlciIsImEiOiJjanNxaHk0bm4xOGJwM3lwNmxiYjB6bWswIn0.8wMb3NDgrpO-ccAw_hPWUQ';
+    <script  src="js/index.js"></script>
 
-var map = new mapboxgl.Map({
-    container: 'map',
-    style: 'mapbox://styles/osu-battelle-center/cjsqq2icr01591foxt2ctxcoe',
-    center: [28.771726,-0.384252],
-    zoom: 7
-});
 
-var icon = "circle";
-var months = [
-'January',
-'February',
-'March',
-'April',
-'May',
-'June',
-'July',
-'August',
-'September',
-'October',
-'November',
-'December'
-];
 
-map.on('load', function() {
-    map.addSource('violence', {
-        type: 'geojson',
-        data: 'https://raw.githubusercontent.com/OSU-Battelle-Center/DRC-Ebola-Conflict/master/Data/kivu_security.geojson'
-    });
-    map.addLayer({
-    "id": "violence",
-    "type": "circle",
-    "source": "violence",
-    "paint": {
-            'circle-radius': {
-                'base': 10,
-                'stops': [[12, 3], [22, 10]]
-            },
-            'circle-color': '#880000'
-        }
-    });
-    // Create a popup, but don't add it to the map yet.
-    var popup = new mapboxgl.Popup({
-        closeButton: true,
-        closeOnClick: true
-    });
-    map.on('mouseover', 'violence', function(e) {
-        // Change the cursor style as a UI indicator.
-        map.getCanvas().style.cursor = 'pointer';
-
-        // Populate the popup and set its coordinates
-        // based on the feature found.
-        popup.setLngLat(e.features[0].geometry.coordinates)
-            .setHTML(
-                "<h2>"+e.features[0].properties["0/name"]+"</h2>"+
-                "<b>Date:</b> "+e.features[0].properties["start_date_time/date"]+"<br>"+
-                "<b>Severity:</b> "+e.features[0].properties["severity_rating"]+"<br>"+
-                "<b>Details:</b> "+e.features[0].properties["title/0/en"]
-            )
-            //.setHTML(e.features[0].properties.description)
-            .addTo(map);
-    });
-    map.addSource('site assessments', {
-        type: 'geojson',
-        data: 'https://raw.githubusercontent.com/OSU-Battelle-Center/DRC-Ebola-Conflict/master/Data/site_assessment_30.geojson'
-    });
-    map.addLayer({
-      'id': 'site assessments',
-      'type': 'circle',
-      'source': 'site assessments',
-      'paint': {
-      // make circles larger as the user zooms from z12 to z22
-        'circle-radius': {
-          'base': 5,
-          'stops': [[12, 4], [22, 10]]
-      },
-      // color circles by ethnicity, using a match expression
-      // https://docs.mapbox.com/mapbox-gl-js/style-spec/#expressions-match
-      'circle-color': '#ff0f0f'
-    }
-  });
-  map.on('mouseover', 'site assessments', function(e) {
-        // Change the cursor style as a UI indicator.
-        map.getCanvas().style.cursor = 'pointer';
-
-        // Populate the popup and set its coordinates
-        // based on the feature found.
-        popup.setLngLat(e.features[0].geometry.coordinates)
-            .setHTML(
-                "<h2>"+e.features[0].properties["Site"]+"</h2>"+
-                "<b>Date:</b> "+e.features[0].properties["Date"]+"<br>"+
-                "<b>City:</b> "+e.features[0].properties["City"]+"<br>"+
-                "<b>Place:</b> "+e.features[0].properties["Place"]
-            )
-            //.setHTML(e.features[0].properties.description)
-            .addTo(map);
-    });
-    map.addSource('clinics', {
-        type: 'geojson',
-        data: 'https://data.humdata.org/dataset/104bfeb2-f102-4770-90a7-fc8372b488f0/resource/eea74020-28b0-460f-95aa-450d70bb3d85/download/democratic-republic-of-the-congo.geojson'
-    });
-  map.addLayer({
-      'id': 'clinics',
-      'type': 'circle',
-      'source': 'clinics',
-      'paint': {
-      // make circles larger as the user zooms from z12 to z22
-        'circle-radius': {
-          'base': 5,
-          'stops': [[12, 4], [22, 10]]
-      },
-      // color circles by ethnicity, using a match expression
-      // https://docs.mapbox.com/mapbox-gl-js/style-spec/#expressions-match
-      'circle-color': '#ff05c5'
-    }
-  });
-  map.on('mouseover', 'clinics', function(e) {
-        // Change the cursor style as a UI indicator.
-        map.getCanvas().style.cursor = 'pointer';
-
-        // Populate the popup and set its coordinates
-        // based on the feature found.
-        popup.setLngLat(e.features[0].geometry.coordinates)
-            .setHTML(
-                "<h2>"+e.features[0].properties["Name"]+"</h2>"+
-                "<b>Date Modified:</b> "+e.features[0].properties["date_modified"]+"<br>"+
-                "<b>Notes:</b> "+e.features[0].properties["notes"]+"<br>"+
-                "<b>Address:</b> "+e.features[0].properties["physical-address"]
-            )
-            //.setHTML(e.features[0].properties.description)
-            .addTo(map);
-    });
-
-});
-
-var toggleableLayerIds = [ 'violence','site assessments', 'clinics'];
-
-for (var i = 0; i < toggleableLayerIds.length; i++) {
-    var id = toggleableLayerIds[i];
-
-    var link = document.createElement('a');
-    link.href = '#';
-    link.className = 'active';
-    link.textContent = id;
-
-    link.onclick = function (e) {
-        var clickedLayer = this.textContent;
-        e.preventDefault();
-        e.stopPropagation();
-
-        var visibility = map.getLayoutProperty(clickedLayer, 'visibility');
-
-        if (visibility === 'visible') {
-            map.setLayoutProperty(clickedLayer, 'visibility', 'none');
-            this.className = '';
-        } else {
-            this.className = 'active';
-            map.setLayoutProperty(clickedLayer, 'visibility', 'visible');
-        }
-    };
-
-    var layers = document.getElementById('menu');
-    layers.appendChild(link);
-}
-</script>
 
 </body>
+
 </html>
