--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   
   
   
-      <link rel="stylesheet" href="css/style.css">
+      <link rel="stylesheet" href="css/main.css">
 
   
 </head>
@@ -20,6 +20,7 @@
     <title>Ebola Conflict Data Map</title>
     <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
     <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.44.0/mapbox-gl.js'></script>
+    <script src='https://d3js.org/d3.v3.min.js'></script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.7.1.min.js"></script>
     <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.44.0/mapbox-gl.css' rel='stylesheet' />
 </head>
@@ -44,7 +45,8 @@
   
   
 
-    <script  src="js/index.js"></script>
+    <script  src="js/main.js"></script>    
+
 
 
 
