Add styling for vaccinations and pop-density

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div class='map-overlay-inner'>
     <div id='legend' class='legend'>
     <div class='bar'></div>
-    <div>Magnitude (m)</div>
+    <div>Population</div>
     </div>
     </div>
     </div>
