Population GeoJson Import

--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
   
   
 
-    <script  src="js/main.js"></script>    
+    <script  src="js/main.js"></script>  
+	<script  src="js/population.js"></script> 	
 
 
 
