Add title header

--- a/index.html
+++ b/index.html
@@ -27,6 +27,13 @@
 <body>
   <nav id="menu"></nav>
 <div id='map'></div>
+<div class='intro-header' id='features'>
+  <h2>DRC Ebola Conflict Map</h2>
+  <div id='pd'>
+      <p>Hover over a point to see details on each site. 
+      <br/>See project <a href="https://github.com/OSU-Battelle-Center/DRC-Ebola-Conflict">GitHub</a> for more information.</p>
+  </div>
+</div>
 <div class='map-overlay top'>
     <div class='map-overlay-inner'>
     <h2>Timeline</h2>
