--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <title>Ebola Conflict Map</title>
-  
-  
-  
+
+
+
       <link rel="stylesheet" href="css/main.css">
 
-  
+
 </head>
 
 <body>
@@ -28,9 +28,10 @@
   <nav id="menu"></nav>
 <div id='map'></div>
 <div class='intro-header' id='features'>
-  <h2>DRC Ebola Conflict Map</h2>
+  <h2>Situational awareness for the ongoing Ebola outbreak in the Democratic Republic of the Congo</h2>
   <div id='pd'>
-      <p>Hover over a point to see details on each site. 
+      <p>Hover over a point to see details on each site.
+        <br/>Situational awareness for the ongoing Ebola outbreak in the Democratic Republic of the Congo.
       <br/>See project <a href="https://github.com/OSU-Battelle-Center/DRC-Ebola-Conflict">GitHub</a> for more information.</p>
   </div>
 </div>
@@ -49,11 +50,11 @@
     </div>
   </body>
 </html>
-  
-  
 
-    <script  src="js/main.js"></script>  
-	<script  src="js/population.js"></script> 	
+
+
+    <script  src="js/main.js"></script>
+	<script  src="js/population.js"></script>
 
 
 
