--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <nav id="menu"></nav>
 <div id='map'></div>
 <div class='intro-header' id='features'>
-  <h2>Situational awareness for the ongoing Ebola outbreak in the Democratic Republic of the Congo</h2>
+  <h2>2019 North Kivu Ebola outbreak</h2>
   <div id='pd'>
       <p>Hover over a point to see details on each site.
         <br/>Situational awareness for the ongoing Ebola outbreak in the Democratic Republic of the Congo.
