--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <div class='intro-header' id='features'>
   <h2>2019 North Kivu Ebola outbreak</h2>
   <div id='pd'>
-      <p>Situational awareness for the ongoing Ebola outbreak in the Democratic Republic of the Congo. Hover over a point to see details on each site.
+      <p>Situational awareness for the ongoing Ebola outbreak in the Democratic Republic of the Congo. Hover or click for details.
       <br/>See project <a href="https://github.com/OSU-Battelle-Center/DRC-Ebola-Conflict">GitHub</a> for more information.</p>
   </div>
 </div>
