--- a/index.html
+++ b/index.html
@@ -25,6 +25,18 @@
 <body>
   <nav id= 'menu'></nav>
   <div id='map'></div>
+  <div id='menu-styles'>
+    <input id='streets-v11' type='radio' name='rtoggle' value='streets' checked='checked'>
+    <label for='streets'>streets</label>
+    <input id='light-v10' type='radio' name='rtoggle' value='light'>
+    <label for='light'>light</label>
+    <input id='dark-v10' type='radio' name='rtoggle' value='dark'>
+    <label for='dark'>dark</label>
+    <input id='outdoors-v11' type='radio' name='rtoggle' value='outdoors'>
+    <label for='outdoors'>outdoors</label>
+    <input id='satellite-v9' type='radio' name='rtoggle' value='satellite'>
+    <label for='satellite'>satellite</label>
+    </div>
   <div class= 'intro-header' id='features'>
     <h2>2019 North Kivu Ebola Outbreak</h2>
     <div id='pd'>
@@ -91,6 +103,19 @@
     center: [31.242613, 0.707124],
     zoom: 5.2
   });
+
+  var layerList = document.getElementById('menu-styles');
+  var inputs = layerList.getElementsByTagName('input');
+  
+  function switchLayer(layer) {
+  var layerId = layer.target.id;
+  map.setStyle('mapbox://styles/mapbox/' + layerId);
+  
+  }
+  
+  for (var i = 0; i < inputs.length; i++) {
+  inputs[i].onclick = switchLayer;
+  }
 
   var icon = "circle";
 
