Add navigation control

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     center: [28, 0.707124],
     zoom: 6.8
   });
-
+  map.addControl(new mapboxgl.NavigationControl());
   var layerList = document.getElementById('menu-styles');
   var inputs = layerList.getElementsByTagName('input');
   
