--- a/index.html
+++ b/index.html
@@ -26,14 +26,10 @@
   <nav id= 'menu'></nav>
   <div id='map'></div>
   <div id='menu-styles'>
-    <input id='streets-v11' type='radio' name='rtoggle' value='streets' checked='checked'>
-    <label for='streets'>streets</label>
     <input id='light-v10' type='radio' name='rtoggle' value='light'>
     <label for='light'>light</label>
-    <input id='dark-v10' type='radio' name='rtoggle' value='dark'>
+    <input id='dark-v10' type='radio' name='rtoggle' value='dark' checked='checked'>
     <label for='dark'>dark</label>
-    <input id='outdoors-v11' type='radio' name='rtoggle' value='outdoors'>
-    <label for='outdoors'>outdoors</label>
     <input id='satellite-v9' type='radio' name='rtoggle' value='satellite'>
     <label for='satellite'>satellite</label>
     </div>
