--- a/index.html
+++ b/index.html
@@ -26,14 +26,10 @@
   <nav id= 'menu'></nav>
   <div id='map'></div>
   <div id='menu-styles'>
-    <input id='streets-v11' type='radio' name='rtoggle' value='streets' checked='checked'>
-    <label for='streets'>streets</label>
     <input id='light-v10' type='radio' name='rtoggle' value='light'>
     <label for='light'>light</label>
-    <input id='dark-v10' type='radio' name='rtoggle' value='dark'>
+    <input id='dark-v10' type='radio' name='rtoggle' value='dark' checked='checked'>
     <label for='dark'>dark</label>
-    <input id='outdoors-v11' type='radio' name='rtoggle' value='outdoors'>
-    <label for='outdoors'>outdoors</label>
     <input id='satellite-v9' type='radio' name='rtoggle' value='satellite'>
     <label for='satellite'>satellite</label>
     </div>
@@ -41,7 +37,7 @@
     <h2>Ebola Response Platform</h2>
     <div id='pd'>
       <p>Situational awareness for the ongoing Ebola outbreak in the Democratic Republic of the Congo.
-      <br/>See project <a href="https://github.com/OSU-Battelle-Center/DRC-Ebola-Response">GitHub</a> for more information.</p>
+      <br/>All <a href="https://github.com/OSU-Battelle-Center/DRC-Ebola-Conflict">documentation</a> and <a href="https://github.com/OSU-Battelle-Center/DRC-Ebola-Conflict/wiki">data</a> available.</p>
     </div>
   </div>
   <div class='map-overlay top'>
@@ -104,13 +100,13 @@
   map.addControl(new mapboxgl.NavigationControl());
   var layerList = document.getElementById('menu-styles');
   var inputs = layerList.getElementsByTagName('input');
-  
+
   function switchLayer(layer) {
   var layerId = layer.target.id;
   map.setStyle('mapbox://styles/mapbox/' + layerId);
   map.setData();
   }
-  
+
   for (var i = 0; i < inputs.length; i++) {
   inputs[i].onclick = switchLayer;
   }
@@ -139,7 +135,7 @@
     };
 
     //add scale to map
-    map.addControl(new mapboxgl.ScaleControl({position: 'bottom-left'}));
+    map.addControl(new mapboxgl.ScaleControl({position: 'top-right'}));
 
 
 function addDataLayer(){
