--- a/index.html
+++ b/index.html
@@ -36,8 +36,7 @@
   <div class= 'intro-header' id='features'>
     <h2>Ebola Response Platform</h2>
     <div id='pd'>
-      <p>Situational awareness for the ongoing Ebola outbreak in the Democratic Republic of the Congo.
-      <br/>All <a href="https://github.com/OSU-Battelle-Center/DRC-Ebola-Conflict">documentation</a> and <a href="https://github.com/OSU-Battelle-Center/DRC-Ebola-Conflict/wiki">data</a> available.</p>
+      <p>Situational awareness for the ongoing Ebola outbreak in the Democratic Republic of the Congo. All <a href="https://github.com/OSU-Battelle-Center/DRC-Ebola-Conflict">documentation</a> and <a href="https://github.com/OSU-Battelle-Center/DRC-Ebola-Conflict/wiki">data</a> available.</p>
     </div>
   </div>
   <div class='map-overlay top'>
