--- a/index.html
+++ b/index.html
@@ -247,12 +247,12 @@ function addDataLayer(){
         "source": "Violence",
         "paint": {
           'circle-radius': {
-              'base': 10,
+              'base': 7,
               'stops': [[12, 5], [22, 10]]
           },
           'circle-color': '#ff1111',
           'circle-stroke-color': '#770000',
-          'circle-stroke-width':1
+          'circle-stroke-width':.1
         }
       });
       // Create a popup, but don't add it to the map yet.
