--- a/index.html
+++ b/index.html
@@ -199,17 +199,17 @@ function addDataLayer(){
           ['linear'],
           ['get', 'case_dat_5'],
           0,
-          'hsl(0, 99%, 100%)',
+          'rgba(255,255,255,0)',
           56.3,
-          'hsl(0, 100%, 70%)',
+          'rgba(255,200,200,0.6)',
           112.5,
-          'hsl(0, 100%, 60%)',
+          'rgba(176,155,126,0.6)',
           168.8,
-          'hsl(0, 100%, 50%)',
+          'rgba(176,155,126,0.8)',
           225,
-          'hsl(0, 100%, 40%)'
+          'rgba(176,155,126,1)'
         ],
-        'fill-opacity': ["case", ["has", "case_dat_5"], 0.30, 0]
+        'fill-opacity': ["case", ["has", "case_dat_5"], 1.0, 0]
       }
     });
     map.on('click', 'Total Confirmed Cases', function (e) {
@@ -262,6 +262,8 @@ function addDataLayer(){
           'circle-stroke-width':.1
         }
       });
+      
+    filterBy(0);
       // Create a popup, but don't add it to the map yet.
       var popup = new mapboxgl.Popup({
         closeButton: true,
@@ -375,7 +377,7 @@ function addDataLayer(){
             ['number', ['get', 'Vaccinations']],
             13, 5, 100, 8, 557, 12, 1025, 15, 1700, 20, 3000, 30, 12000, 50, 25000, 75
             ],
-          'circle-color': '#ffffff',
+          'circle-color': '#ff00ff',
           'circle-opacity': 0.2
         }
       });
